correction mobile filtresv2

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -819,8 +819,10 @@ footer div {
     }
 
     .info-icon {
-        width: 25px;
-        height: 25px;
+        min-width: 25px;
+        max-width: 25px;
+        min-height: 25px;
+        max-height: 25px;
         margin-right: 5px;
     }
     
